--- a/views/default/frontend/index.html
+++ b/views/default/frontend/index.html
@@ -35,11 +35,11 @@
                 <span class="z_s_l"></span>
                 <span class="z_s_r"></span>
                 <span class="text">
-                    <span name="inputLabel" class="z_input_lab" style="display:none;">输入想查询的词</span>
-                    <input id="playAddr" value="" placeholder="输入想查询的词" name="" type="text">
+                    <span name="kwPlaceholder" class="z_input_lab" style="display:none;">输入想查询的词</span>
+                    <input id="kwInput" value="" placeholder="输入想查询的词" name="" type="text">
                 </span>
             </div>
-            <a class="z_btn_bf" id="playBtn" href="javascript:;" title="播放" onclick="return false;">搜索</a>
+            <a class="z_btn_bf" id="searchBtn" href="javascript:;" title="播放" onclick="return false;">搜索</a>
         </div>
 	</div>
 </div><!-- // end #header -->
@@ -79,7 +79,7 @@
 		<div  class="row clearfix">
 			{foreach:items=$category_goods item=$goods}
 			{if:$key!=='cname'}
-			<div class="column" {if:$key==3}style="margin-right:0;"{/if}>
+			<div class="column" {if:$key==4}style="margin-right:0;"{/if}>
 				<div class="image">
 					<a href="{$goods['url']}" title="{$goods['name']}" target="_blank">
 						<img src="{$goods['list_img']}" alt="{$goods['name']}" />
@@ -89,7 +89,7 @@
 					<strong class="new_price">￥{$goods['sell_price']}</strong>
 					原价：<span class="old_price">{$goods['market_price']}</span>
 				</p>
-				<p><a href="{$goods['url']}" title="{$goods['name']}" target="_blank">{echo:IString::substr($goods['name'],14,'....')}</a></p>
+				<p><a href="{$goods['url']}" title="{$goods['name']}" target="_blank">{echo:IString::substr($goods['name'],25,'....')}</a></p>
 				<p class="sub_tip">{$goods['notes']}</p>
 			</div>
 			{/if}
@@ -111,3 +111,121 @@
 	
 </body>
 </html>
+
+<script type="text/javascript">
+$(function(){
+	// 搜索框
+	showKeyWord();
+	setInterval(function(){
+		showKeyWord();
+	},5*1000);
+	
+	$('#kwInput').blur(function(){
+		var kwValue = $(this).val();
+		if(!kwValue && !placeholderSupport){
+			$('#kwPlaceholder').show();
+		}
+	}).focus(function(){
+		if(  $(this).val() && !placeholderSupport){
+			$('#kwPlaceholder').hide();
+		}	
+	}).keyup(function(){
+		if( !placeholderSupport){
+			if($(this).val()){
+				$('#kwPlaceholder').hide();
+			}else{
+				$('#kwPlaceholder').show();
+			}
+		}
+	});
+	//按了enter键搜索
+	$("#kwInput").keydown(function(event){
+		event=event||window.event;
+		if(event.keyCode==13){
+			goSearch();	
+		}
+	});
+	
+	// 点击搜索
+	$('#searchBtn').click(function(){
+		goSearch();
+	});
+
+	// 热词
+	showHotWords();
+	setInterval(function(){
+		showHotWords();
+	},50*1000);
+});
+var searchUrl = "/?controller=frontend&action=search";
+var testInput = document.createElement("input");
+var placeholderSupport = 1;
+if(!('placeholder' in testInput))
+	placeholderSupport = 0;
+
+// 搜索词显示
+function showKeyWord(){
+	if( typeof(keyword)!='undefined' && keyword ){
+		placeholder = Base.decode(keyword);
+	}
+	if(!placeholder){
+		if(typeof(KEYWORDS)=='undefined' || $('#kwInput:focus').size()>0)
+			return false;
+		var placeholder = '',kwIndex=0;
+		for(var i=0;i<50;i++){
+			kwIndex = parseInt(Math.random()*10);
+			if(KEYWORDS[kwIndex]){
+				placeholder = KEYWORDS[kwIndex];
+				break;
+			}
+		}
+	}
+	if(placeholderSupport){
+		$('#kwInput').attr('placeholder',placeholder);
+	}else{
+		$('#kwPlaceholder').html(placeholder).show();
+	}
+}
+
+// 热词显示
+function showHotWords(){
+	if(typeof(KEYWORDS)=='undefined')
+		return false;
+	var hwIndexArr = {},hotLinks='热搜：',separator = '',validWordNum = 0;
+	for(var i=0;validWordNum<4;i++){
+		var hwIndex = parseInt(Math.random()*100);
+		
+		if(!hwIndexArr.hwIndex && KEYWORDS[hwIndex]){
+			hwIndexArr[i] = hwIndex;
+			hotWord = KEYWORDS[hwIndex];
+			hotLinks += separator+'<a href="'+searchUrl+'&kwInput='+encodeURIComponent(hotWord)+'" target="_blank" title="'+hotWord+'" >'+hotWord+'</a>';
+			separator = '&nbsp;&nbsp;';
+			validWordNum +=1;
+		}
+		if(validWordNum>100)
+			break;	
+	}
+	$('#hotWords').html(hotLinks);
+}
+
+function goSearch(){
+	var kwValue = $('#kwInput').val();
+	if(!kwValue){
+		if(placeholderSupport){
+			kwValue = $('#kwInput').attr('placeholder');
+		}else{
+			kwValue = $('#kwPlaceholder').html();
+		}
+	}
+	// 首页新开窗口
+	if(document.location.host=='www.utao.info' && document.location.search =='' ){
+		window.open(searchUrl+'&kw='+encodeURIComponent(kwValue));
+		return false;
+	}else{
+		document.location.href = searchUrl+'&kw='+encodeURIComponent(kwValue);
+		return false;
+	}
+}
+
+
+</script>
