--- a/views/default/frontend/index.html
+++ b/views/default/frontend/index.html
@@ -79,7 +79,7 @@
 		<div  class="row clearfix">
 			{foreach:items=$category_goods item=$goods}
 			{if:$key!=='cname'}
-			<div class="column" {if:$key==4}style="margin-right:0;"{/if}>
+			<div class="column" {if:$key==4}style="margin-left:0;"{/if}>
 				<div class="image">
 					<a href="{$goods['url']}" title="{$goods['name']}" target="_blank">
 						<img src="{$goods['list_img']}" alt="{$goods['name']}" />
