--- a/views/default/frontend/glist.html
+++ b/views/default/frontend/glist.html
@@ -9,6 +9,7 @@
 	<link href="css/nivo-slider.css" rel="stylesheet" type="text/css" />
 	<!--[if IE]><link href="css/style-ie.css" rel="stylesheet" type="text/css" /><![endif]-->
 	<script type="text/javascript" src="js/jquery-1.7.1.min.js"></script>
+	<script type="text/javascript" src="js/jquery.lazyload.js"></script>
 	<script type="text/javascript" src="js/page.js"></script>
 </head>
 <body>
@@ -132,7 +133,7 @@
 			<div class="column" {if:$key%5==0} style="margin-left:0;"{/if}>
 				<div class="image">
 					<a href="{$goods['url']}" title="{$goods['name']}" target="_blank">
-						<img src="{$goods['list_img']}" alt="{$goods['name']}" />
+						<img src="img/no_pic.gif" data-original="{$goods['list_img']}" alt="{$goods['name']}" />
 					</a>
 				</div>
 				<p class="pro_price">
@@ -181,6 +182,10 @@ $(function(){
 			$(this).find('a').html('展开↓');
 			parent.addClass('less');
 		}	
+	});
+	$(".image img").lazyload({ 
+		effect: "fadeIn",
+		threshold : 200
 	});
 
 });
