--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ a:hover {color: #3EAF0E;text-decoration: underline;}
 /*** Main ***/
 .main { padding: 25px 0px 40px; }
 
-.container { margin: 0px auto; width: 960px; }
+.container { margin: 0px auto; width: 1020px; }
 
 /*** Header ***/
 .header { background: #e4e4e4; border-bottom: 1px solid #d9d9d9; border-top: 5px solid #cccccc; height: 94px; }
@@ -85,12 +85,12 @@ input:-ms-input-placeholder{color:#ccc;}
 .nivo-controlNav .nivo-control.active { background: url(../images/bullets.png) no-repeat scroll 0 -22px; }
 
 /*** 列表项 ***/
-.row .column { float: left; margin-left:40px; width: 160px;height: 275px; }
+.row .column { float: left; margin-left:45px; width: 220px;height: 325px; }
 
-.row .column.last { margin-right: 0px; }
-.row .column .image { background: #cccccc; height: 160px; width: 160px; margin-bottom: 2px; -moz-box-shadow: 0 0 2px #888; -webkit-box-shadow: 0 0 2px#888; box-shadow: 0 0 5px #888;overflow: hidden; }
+.row .column.last { margin-left: 0px; }
+.row .column .image { background: #cccccc; height: 220px; width: 220px; margin-bottom: 2px; -moz-box-shadow: 0 0 2px #888; -webkit-box-shadow: 0 0 2px#888; box-shadow: 0 0 5px #888;overflow: hidden; }
 .row .column .image:hover{-moz-box-shadow: 0 0 5px #3EAF0E; -webkit-box-shadow: 0 0 5px#3EAF0E; box-shadow: 0 0 5px #3EAF0E;}
-.row .column .image img{ height:160px;width:160px;}
+.row .column .image img{ height:220px;width:220px;}
 .row .column .pro_price {color: #636362;padding: 5px 0 0;}
 .row .column .pro_price .new_price {color:#FF4500;font-size: 18px;font-weight: normal;margin: 0 4px 0 0;}
 .row .column .pro_price .old_price {text-decoration: line-through;}
@@ -148,23 +148,13 @@ background-color: #3EAF0E;color: white;text-decoration: none;}
 
 
 
-/*** Widget ***/
-.widget { margin-bottom: 25px; }
-.widget h3 { border-bottom: 1px solid #ccc; margin-bottom: 10px; padding-bottom: 10px; }
-
-.widget .search {  }
-.widget .search .input-txt { height: 14px; padding: 5px; }
-.widget .search .input-btn { cursor: pointer; height: 28px; padding: 0px; width: 40px; }
-
-
-.widget .menu { list-style: square; margin: 0px; }
-.widget .menu li { float: none; line-height: 20px; }
-
-/*** Contact ***/
-.contact-form { float: left; margin-right: 30px; width: 500px; }
-.contact-form p { margin-bottom: 20px; overflow: hidden; }
-.contact-form label { float: left; width: 100px; }
-.contact-form .input-txt { height: 20px; width: 200px; }
-.contact-form .input-btn { margin-left: 100px; }
-
-.contact-map { float: left; width: 300px; }
+/*** pagination  ***/
+.jPaginate{height:34px; position:relative;color:#a5a5a5; font-size: 1.2em;width:100%;}
+.jPaginate a{line-height:15px;height:18px;cursor:pointer;padding:2px 10px; margin:2px;}
+.jPag-control-back{     position:absolute;left:0px;}
+.jPag-control-front{position:absolute;top:0px;}
+.jPaginate span{font-size: 1.2em;cursor:pointer;}
+.jPaginate ul.jPag-pages{float:left;list-style-type:none;  margin:0px 0px 0px 0px;  padding:0px;}
+.jPaginate ul.jPag-pages li{display:inline;float:left;padding:0px;margin:0px;}
+.jPaginate ul.jPag-pages li a{float:left;padding:2px 10px;}
+.jPaginate span.jPag-current{ cursor:default; font-weight:normal; line-height:15px;height:18px;padding:2px 10px;margin:2px;float:left;}
